@@ -6,7 +6,6 @@
 package org.opensearch.sql.analysis;
 
 import com.google.common.collect.ImmutableList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.regex.Pattern;
@@ -54,7 +53,7 @@ public class SelectExpressionAnalyzer
 
   @Override
   public List<NamedExpression> visitField(Field node, AnalysisContext context) {
-    return Collections.singletonList(DSL.named(node.accept(expressionAnalyzer, context)));
+    return List.of(DSL.named(node.accept(expressionAnalyzer, context)));
   }
 
   @Override
@@ -65,8 +64,7 @@ public class SelectExpressionAnalyzer
     }
 
     Expression expr = referenceIfSymbolDefined(node, context);
-    return Collections.singletonList(
-        DSL.named(unqualifiedNameIfFieldOnly(node, context), expr, node.getAlias()));
+    return List.of(DSL.named(unqualifiedNameIfFieldOnly(node, context), expr, node.getAlias()));
   }
 
   /**
