@@ -5,7 +5,6 @@
 
 package org.opensearch.sql.ast.expression;
 
-import java.util.Arrays;
 import java.util.List;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
@@ -25,7 +24,7 @@ public class Argument extends UnresolvedExpression {
   //    private final DataType valueType;
   @Override
   public List<UnresolvedExpression> getChild() {
-    return Arrays.asList(value);
+    return List.of(value);
   }
 
   @Override
