@@ -5,7 +5,6 @@
 
 package org.opensearch.sql.planner.logical;
 
-import java.util.Arrays;
 import java.util.List;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
@@ -30,7 +29,7 @@ public class LogicalDedupe extends LogicalPlan {
       Integer allowedDuplication,
       Boolean keepEmpty,
       Boolean consecutive) {
-    super(Arrays.asList(child));
+    super(List.of(child));
     this.dedupeList = dedupeList;
     this.allowedDuplication = allowedDuplication;
     this.keepEmpty = keepEmpty;
