@@ -5,7 +5,6 @@
 
 package org.opensearch.sql.planner.logical;
 
-import java.util.Collections;
 import java.util.List;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
@@ -31,7 +30,7 @@ public class LogicalRareTopN extends LogicalPlan {
       Integer noOfResults,
       List<Expression> fieldList,
       List<Expression> groupByList) {
-    super(Collections.singletonList(child));
+    super(List.of(child));
     this.commandType = commandType;
     this.noOfResults = noOfResults;
     this.fieldList = fieldList;
