@@ -5,7 +5,6 @@
 
 package org.opensearch.sql.planner.physical;
 
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import lombok.EqualsAndHashCode;
@@ -59,7 +58,7 @@ public class AggregationOperator extends PhysicalPlan {
 
   @Override
   public List<PhysicalPlan> getChild() {
-    return Collections.singletonList(input);
+    return List.of(input);
   }
 
   @Override
