@@ -6,7 +6,6 @@
 package org.opensearch.sql.planner.physical;
 
 import com.google.common.collect.ImmutableList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
@@ -78,7 +77,7 @@ public class DedupeOperator extends PhysicalPlan {
 
   @Override
   public List<PhysicalPlan> getChild() {
-    return Collections.singletonList(input);
+    return List.of(input);
   }
 
   @Override
