@@ -5,7 +5,6 @@
 
 package org.opensearch.sql.planner;
 
-import static java.util.Collections.emptyList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertSame;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -31,8 +30,6 @@ import static org.opensearch.sql.planner.logical.LogicalPlanDSL.values;
 import static org.opensearch.sql.planner.logical.LogicalPlanDSL.window;
 
 import com.google.common.collect.ImmutableMap;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -92,12 +89,12 @@ class DefaultImplementorTest {
     ReferenceExpression exclude = ref("name", STRING);
     ReferenceExpression dedupeField = ref("name", STRING);
     Expression filterExpr = literal(ExprBooleanValue.of(true));
-    List<NamedExpression> groupByExprs = Arrays.asList(DSL.named("age", ref("age", INTEGER)));
-    List<Expression> aggExprs = Arrays.asList(ref("age", INTEGER));
+    List<NamedExpression> groupByExprs = List.of(named("age", ref("age", INTEGER)));
+    List<Expression> aggExprs = List.of(ref("age", INTEGER));
     ReferenceExpression rareTopNField = ref("age", INTEGER);
-    List<Expression> topByExprs = Arrays.asList(ref("age", INTEGER));
+    List<Expression> topByExprs = List.of(ref("age", INTEGER));
     List<NamedAggregator> aggregators =
-        Arrays.asList(DSL.named("avg(age)", new AvgAggregator(aggExprs, ExprCoreType.DOUBLE)));
+        List.of(named("avg(age)", new AvgAggregator(aggExprs, ExprCoreType.DOUBLE)));
     Map<ReferenceExpression, ReferenceExpression> mappings =
         ImmutableMap.of(ref("name", STRING), ref("lastname", STRING));
     Pair<ReferenceExpression, Expression> newEvalField =
@@ -128,7 +125,7 @@ class DefaultImplementorTest {
                                     remove(
                                         rename(
                                             aggregation(
-                                                filter(values(emptyList()), filterExpr),
+                                                filter(values(List.of()), filterExpr),
                                                 aggregators,
                                                 groupByExprs),
                                             mappings),
@@ -159,8 +156,7 @@ class DefaultImplementorTest {
                                         PhysicalPlanDSL.rename(
                                             PhysicalPlanDSL.agg(
                                                 PhysicalPlanDSL.filter(
-                                                    PhysicalPlanDSL.values(emptyList()),
-                                                    filterExpr),
+                                                    PhysicalPlanDSL.values(List.of()), filterExpr),
                                                 aggregators,
                                                 groupByExprs),
                                             mappings),
@@ -192,9 +188,8 @@ class DefaultImplementorTest {
     NamedExpression windowFunction = named(new RowNumberFunction());
     WindowDefinition windowDefinition =
         new WindowDefinition(
-            Collections.singletonList(ref("state", STRING)),
-            Collections.singletonList(
-                ImmutablePair.of(Sort.SortOption.DEFAULT_DESC, ref("age", INTEGER))));
+            List.of(ref("state", STRING)),
+            List.of(ImmutablePair.of(Sort.SortOption.DEFAULT_DESC, ref("age", INTEGER))));
 
     NamedExpression[] projectList = {
       named("state", ref("state", STRING)), named("row_number", ref("row_number", INTEGER))
@@ -284,11 +279,11 @@ class DefaultImplementorTest {
     // replace SortOperator + LimitOperator with TakeOrderedOperator
     Pair<Sort.SortOption, Expression> sort =
         ImmutablePair.of(Sort.SortOption.DEFAULT_ASC, ref("a", INTEGER));
-    var logicalValues = values(emptyList());
+    var logicalValues = values(List.of());
     var logicalSort = sort(logicalValues, sort);
     var logicalLimit = limit(logicalSort, 10, 5);
     PhysicalPlan physicalPlanTree =
-        PhysicalPlanDSL.takeOrdered(PhysicalPlanDSL.values(emptyList()), 10, 5, sort);
+        PhysicalPlanDSL.takeOrdered(PhysicalPlanDSL.values(List.of()), 10, 5, sort);
     assertEquals(physicalPlanTree, logicalLimit.accept(implementor, null));
 
     // don't replace if LimitOperator's child is not SortOperator
@@ -299,7 +294,7 @@ class DefaultImplementorTest {
     physicalPlanTree =
         PhysicalPlanDSL.limit(
             PhysicalPlanDSL.eval(
-                PhysicalPlanDSL.sort(PhysicalPlanDSL.values(emptyList()), sort), newEvalField),
+                PhysicalPlanDSL.sort(PhysicalPlanDSL.values(List.of()), sort), newEvalField),
             10,
             5);
     assertEquals(physicalPlanTree, logicalLimit.accept(implementor, null));
