@@ -10,7 +10,6 @@ import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import com.google.common.collect.ImmutableMap;
-import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.opensearch.sql.ast.tree.RareTopN.CommandType;
@@ -27,8 +26,8 @@ public class RareTopNOperatorTest extends PhysicalPlanTestBase {
         new RareTopNOperator(
             new TestScan(),
             CommandType.RARE,
-            Collections.singletonList(DSL.ref("action", ExprCoreType.STRING)),
-            Collections.emptyList());
+            List.of(DSL.ref("action", ExprCoreType.STRING)),
+            List.of());
     List<ExprValue> result = execute(plan);
     assertEquals(2, result.size());
     assertThat(
@@ -44,8 +43,8 @@ public class RareTopNOperatorTest extends PhysicalPlanTestBase {
         new RareTopNOperator(
             new TestScan(),
             CommandType.RARE,
-            Collections.singletonList(DSL.ref("response", ExprCoreType.INTEGER)),
-            Collections.singletonList(DSL.ref("action", ExprCoreType.STRING)));
+            List.of(DSL.ref("response", ExprCoreType.INTEGER)),
+            List.of(DSL.ref("action", ExprCoreType.STRING)));
     List<ExprValue> result = execute(plan);
     assertEquals(4, result.size());
     assertThat(
@@ -63,8 +62,8 @@ public class RareTopNOperatorTest extends PhysicalPlanTestBase {
         new RareTopNOperator(
             new TestScan(),
             CommandType.TOP,
-            Collections.singletonList(DSL.ref("action", ExprCoreType.STRING)),
-            Collections.emptyList());
+            List.of(DSL.ref("action", ExprCoreType.STRING)),
+            List.of());
     List<ExprValue> result = execute(plan);
     assertEquals(2, result.size());
     assertThat(
@@ -81,8 +80,8 @@ public class RareTopNOperatorTest extends PhysicalPlanTestBase {
             new TestScan(),
             CommandType.TOP,
             1,
-            Collections.singletonList(DSL.ref("action", ExprCoreType.STRING)),
-            Collections.emptyList());
+            List.of(DSL.ref("action", ExprCoreType.STRING)),
+            List.of());
     List<ExprValue> result = execute(plan);
     assertEquals(1, result.size());
     assertThat(
@@ -96,8 +95,8 @@ public class RareTopNOperatorTest extends PhysicalPlanTestBase {
             new TestScan(),
             CommandType.TOP,
             1,
-            Collections.singletonList(DSL.ref("response", ExprCoreType.INTEGER)),
-            Collections.singletonList(DSL.ref("action", ExprCoreType.STRING)));
+            List.of(DSL.ref("response", ExprCoreType.INTEGER)),
+            List.of(DSL.ref("action", ExprCoreType.STRING)));
     List<ExprValue> result = execute(plan);
     assertEquals(2, result.size());
     assertThat(
