@@ -15,7 +15,6 @@ import com.google.common.collect.Sets;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -157,7 +156,7 @@ public class PrettyFormatResponseIT extends SQLIntegTestCase {
                 "SELECT _score FROM %s WHERE SCORE(match_phrase(phrase, 'brown fox'))",
                 TestsConstants.TEST_INDEX_PHRASE));
 
-    List<String> fields = Collections.singletonList("_score");
+    List<String> fields = List.of("_score");
     assertContainsColumns(getSchema(response), fields);
     assertContainsData(getDataRows(response), fields);
   }
@@ -277,7 +276,7 @@ public class PrettyFormatResponseIT extends SQLIntegTestCase {
             String.format(
                 Locale.ROOT, "SELECT * FROM %s GROUP BY age", TestsConstants.TEST_INDEX_ACCOUNT));
 
-    List<String> fields = Collections.singletonList("age");
+    List<String> fields = List.of("age");
     assertContainsColumns(getSchema(response), fields);
     assertContainsData(getDataRows(response), fields);
   }
@@ -335,7 +334,7 @@ public class PrettyFormatResponseIT extends SQLIntegTestCase {
                 "SELECT COUNT(*) FROM %s GROUP BY age",
                 TestsConstants.TEST_INDEX_ACCOUNT));
 
-    List<String> fields = Arrays.asList("COUNT(*)");
+    List<String> fields = List.of("COUNT(*)");
     assertContainsColumns(getSchema(response), fields);
 
     JSONArray dataRows = getDataRows(response);
@@ -357,7 +356,7 @@ public class PrettyFormatResponseIT extends SQLIntegTestCase {
                 "SELECT count(*) FROM %s GROUP BY age",
                 TestsConstants.TEST_INDEX_ACCOUNT));
 
-    List<String> fields = Arrays.asList("COUNT(*)");
+    List<String> fields = List.of("COUNT(*)");
     assertContainsColumns(getSchema(response), fields);
 
     JSONArray dataRows = getDataRows(response);
@@ -378,7 +377,7 @@ public class PrettyFormatResponseIT extends SQLIntegTestCase {
                 "SELECT COUNT(*) AS total FROM %s GROUP BY age",
                 TestsConstants.TEST_INDEX_ACCOUNT));
 
-    List<String> fields = Arrays.asList("total");
+    List<String> fields = List.of("total");
     assertContainsColumns(getSchema(response), fields);
 
     JSONArray dataRows = getDataRows(response);
@@ -398,7 +397,7 @@ public class PrettyFormatResponseIT extends SQLIntegTestCase {
                 Locale.ROOT, "SELECT SUM(age) FROM %s", TestsConstants.TEST_INDEX_ACCOUNT));
 
     String ageSum = "SUM(age)";
-    assertContainsColumns(getSchema(response), Collections.singletonList(ageSum));
+    assertContainsColumns(getSchema(response), List.of(ageSum));
 
     JSONArray dataRows = getDataRows(response);
     for (int i = 0; i < dataRows.length(); i++) {
@@ -433,7 +432,7 @@ public class PrettyFormatResponseIT extends SQLIntegTestCase {
                 TestsConstants.TEST_INDEX_ACCOUNT));
 
     String ageSum = "gender";
-    assertContainsColumns(getSchema(response), Collections.singletonList(ageSum));
+    assertContainsColumns(getSchema(response), List.of(ageSum));
 
     JSONArray dataRows = getDataRows(response);
     assertEquals(1, dataRows.length());
@@ -555,7 +554,7 @@ public class PrettyFormatResponseIT extends SQLIntegTestCase {
                 TestsConstants.TEST_INDEX_ACCOUNT,
                 TestsConstants.TEST_INDEX_ACCOUNT));
 
-    List<String> fields = Collections.singletonList("b1.age");
+    List<String> fields = List.of("b1.age");
     assertContainsColumns(getSchema(response), fields);
     assertContainsData(getDataRows(response), fields);
   }
