@@ -6,7 +6,6 @@
 package org.opensearch.sql.opensearch.planner.physical;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -98,7 +97,7 @@ public class MLOperator extends MLCommonsOperatorActions {
 
   @Override
   public List<PhysicalPlan> getChild() {
-    return Collections.singletonList(input);
+    return List.of(input);
   }
 
   protected Map<String, Object> processArgs(Map<String, Literal> arguments) {
